fixing layout creative_page_sub
add scrollbar

--- a/source/layout/css/style.css
+++ b/source/layout/css/style.css
@@ -184,9 +184,12 @@ nav ul li {
 	}
 /*textarea_scroll*/
 
+
+
+
+/*
 .scroll_bar {
 	overflow:auto;}
-/* customized scrollbar */
 .scroll_bar::-webkit-scrollbar {
     width: 5px;
 }
@@ -201,8 +204,6 @@ nav ul li {
 	background-image:url(../images/common/scrollbar_thumb.png);
 	background-size:17px 17px;
 	background-repeat:no-repeat;
-/*    background: #FF0; 
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); */
 }
 .scroll_bar::-webkit-scrollbar-thumb:window-inactive {
     width:17px;
@@ -210,4 +211,4 @@ nav ul li {
 	background-image:url(../images/common/scrollbar_thumb.png);
 	background-size:17px 17px;
 	background-repeat:no-repeat;
-}
+}*/
